# Oedon

./: .gitignore  .gitmodules  CMakeLists.txt  Oedon.sln  README.md  bootstrap.ps1
.github/workflows/: build.yml
Dependencies/: CMakeLists.txt
Dependencies/imgui/: CMakeLists.txt  imgui.cpp
Dependencies/imgui/include/: imgui.h
Editor/: CMakeLists.txt
Editor/OedonEditor/: App.axaml  App.axaml.cs  OedonEditor.csproj  OedonEditorModule.cs  Program.cs  ViewLocator.cs  app.manifest
Editor/OedonEditor/Extensions/: ContainerBuilderExtensions.cs
Editor/OedonEditor/ViewModels/: BaseViewModel.cs  MainWindowViewModel.cs
Editor/OedonEditor/Views/: MainWindow.axaml  MainWindow.axaml.cs  MainWindowMenu.axaml  MainWindowMenu.axaml.cs  MainWindowStatusBar.axaml  MainWindowStatusBar.axaml.cs
Editor/include/: BlueprintView.h  BlueprintViewModel.h  EventDispatcher.h  Events.h  Framebuffer.h  GpuMesh.h  MainWindowView.h  MainWindowViewModel.h  NodeFactory.h  PropertiesView.h  SDLWindow.h  SceneView.h  SceneViewModel.h  Shader.h
Editor/include/nodes/: ConstantNode.h  CubeNode.h  LineLerper.h  MeshNode.h  MeshTransformNode.h
Editor/src/: BlueprintView.cpp  BlueprintViewModel.cpp  EventDispatcher.cpp  Framebuffer.cpp  GpuMesh.cpp  MainWindowView.cpp  MainWindowViewModel.cpp  NodeFactory.cpp  PropertiesView.cpp  SDLWindow.cpp  SceneView.cpp  SceneViewModel.cpp  Shader.cpp  main.cpp
Editor/src/nodes/: ConstantNode.cpp  CubeNode.cpp  LineLerper.cpp  MeshNode.cpp  MeshTransformNode.cpp
Oedon/: CMakeLists.txt
Oedon/include/: DataVariant.h  FatVertex.h  Mesh.h  Points.h  Shapes.h
Oedon/src/: DataVariant.cpp  FatVertex.cpp  Mesh.cpp  Shapes.cpp  stub.cpp
Resources/Shaders/: debug.frag.glsl  debug.normals.frag.glsl  default.vert.glsl  points.vert.glsl
src/Oedon/: BasicTransforms.cpp  Mesh.h  Oedon.vcxproj  Oedon.vcxproj.filters  Operations.cpp  Operations.h  Resources.h  Scene.cpp  Scene.h  Stub.cpp  common.h  dllmain.cpp  vcpkg.json
src/Oedon.Core/: Class1.cs
src/Oedon.Core.UI/: Class1.cs  Oedon.Core.UI.csproj
src/Oedon.Core.UI/Attributes/: DocumentAttribute.cs  ToolAttribute.cs
src/Oedon.Designer/: App.axaml  App.axaml.cs  Oedon.Designer.csproj  Program.cs  ViewLocator.cs
src/Oedon.Designer.Core/: Class1.cs  Oedon.Designer.Core.csproj
src/Oedon.Designer.Core.UI/: Class1.cs  Oedon.Designer.Core.UI.csproj
src/Oedon.NativeInterop/: CopyNative.targets  Mapping.xml  Oedon.NativeInterop.csproj  OedonNative.cs
src/Oedon.Renderer/: Oedon.Renderer.vcxproj  dllmain.cpp
src/Oedon.Renderer.NativeInterop/: Class1.cs  Oedon.Renderer.NativeInterop.csproj
tests/Oedon.Tests/: UnitTest1.cs
(+59 files in other folders)
